# valkka

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mix.exs  sykli.exs
assets/css/: app.css
assets/js/: app.js
assets/js/hooks/: diff_hook.js  graph_hook.js  index.js  keyboard_hook.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: architecture-v2.md  architecture.md  concept.md  dev-practices.md  domain-model.md  dst-strategy.md  error-handling.md  kanni-0.md  kerto-integration.md  mockup.html  native-app.md  nif-contract.md  otp-architecture.md  sykli-integration.md  testing-strategy.md  ui-design.md  user-stories.md  valkka-0.md  valkka-1.md
lib/: kanni.ex  kanni_web.ex  valkka.ex  valkka_web.ex
lib/kanni/: activity.ex  application.ex  context.ex  plugin.ex  shutdown.ex  workspace.ex
lib/kanni/ai/: provider.ex
lib/kanni/cache/: commit_cache.ex  graph_cache.ex  status_cache.ex
lib/kanni/git/: cli.ex  graph.ex  log.ex  native.ex  types.ex
lib/kanni/plugin/: action_provider.ex  actions.ex  context_provider.ex  event_consumer.ex  (+4 more)
lib/kanni_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/valkka/: activity.ex  application.ex  context.ex  plugin.ex  review.ex  shutdown.ex  status.ex  workspace.ex
lib/valkka_web/: endpoint.ex  gettext.ex  presence.ex  router.ex  telemetry.ex
native/kanni_git/: Cargo.toml  README.md
native/valkka_git/: Cargo.toml  README.md
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: main.rs
test/kanni/: activity_test.exs
test/support/: conn_case.ex
test/valkka/: activity_test.exs
(+91 files in other folders)
